apps/base/jellyseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
        app.kubernetes.io/name: jellyseerr
        app.kubernetes.io/instance: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:2.7.3
          resources:
            requests:
              cpu: "10m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "400Mi"
          volumeMounts:
            - name: jellyseerr-config
              mountPath: /app/config
              subPath: jellyseerr/config
      volumes:
        - name: jellyseerr-config
          persistentVolumeClaim:
            claimName: jellyseerr-config-pvc
