apps/base/jellyseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
spec:
  ingressClassName: traefik
  rules:
    - host: jellyseerr.traefik.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  name: http
